--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -6,4 +6,5 @@ COPY package.json /usr/src/app/
 RUN npm install pm2 -g 
 RUN npm install 
 COPY . /usr/src/app
+EXPOSE 3001
 CMD ["pm2-runtime", "./server.js"]
