--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "source .env-prod.sh && node server.js",
     "start:prod": "source .env-prod.sh && node server.js",
     "start:dev": "source .env-dev.sh && nodemon server.js"
   },
